

lib_LTLIBRARIES = libarg3net-0.2.la

libarg3net_0_2_la_SOURCES = buffered_socket.cpp http_client.cpp socket.cpp socket_factory.cpp socket_server.cpp telnet_client.cpp

pkginclude_HEADERS = buffered_socket.h exception.h protocol.h http_client.h socket.h socket_factory.h socket_server.h telnet_client.h
