
set(${PROJECT_NAME_HTTP}_HEADER_FILES
    client.h
    protocol.h
)

set(${PROJECT_NAME_HTTP}_SOURCE_FILES
  ${${PROJECT_NAME_HTTP}_HEADER_FILES}
  client.cpp
  socket_impl.cpp
  curl_impl.cpp
)

add_library(${PROJECT_NAME_HTTP} ${${PROJECT_NAME_HTTP}_SOURCE_FILES})

target_include_directories(${PROJECT_NAME_HTTP} SYSTEM PUBLIC ${CURL_INCLUDE_DIRS} SYSTEM PUBLIC ${URIPARSER_INCLUDE_DIRS} )

target_link_libraries(${PROJECT_NAME_HTTP} ${PROJECT_NAME} ${CURL_LIBRARIES} ${URIPARSER_LIBRARIES})

create_package(TARGET ${PROJECT_NAME_HTTP} DESCRIPTION "A c++ http client library.")

string(REPLACE "_" "/" INSTALL_DIRECTORY ${PROJECT_NAME_HTTP})

install(FILES ${${PROJECT_NAME_HTTP}_HEADER_FILES} DESTINATION "${CMAKE_INSTALL_PREFIX}/include/${INSTALL_DIRECTORY}")

install(TARGETS ${PROJECT_NAME_HTTP} LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

add_subdirectory(jest)
