
set(SOURCE_FILES
  socket.cpp
)

add_library(${PROJECT_NAME_TELNET} ${SOURCE_FILES})

target_link_libraries(${PROJECT_NAME_TELNET} INTERFACE ${PROJECT_NAME})

set(${PROJECT_NAME_TELNET}_HEADERS
  protocol.h
  socket.h
)

string(REPLACE "_" "/" INSTALL_DIRECTORY ${PROJECT_NAME_TELNET})

install(FILES ${${PROJECT_NAME_TELNET}_HEADERS} DESTINATION "${CMAKE_INSTALL_PREFIX}/include/${INSTALL_DIRECTORY}")

install(TARGETS ${PROJECT_NAME_TELNET} LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)


